; ModuleID = '/home/carl/AnghaBench/openssl/crypto/ct/extr_ct_sct.c_SCT_set_signature_nid.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/ct/extr_ct_sct.c_SCT_set_signature_nid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i32, i8* }

@TLSEXT_hash_sha256 = common dso_local global i8* null, align 8
@TLSEXT_signature_rsa = common dso_local global i32 0, align 4
@SCT_VALIDATION_STATUS_NOT_SET = common dso_local global i8* null, align 8
@TLSEXT_signature_ecdsa = common dso_local global i32 0, align 4
@CT_F_SCT_SET_SIGNATURE_NID = common dso_local global i32 0, align 4
@CT_R_UNRECOGNIZED_SIGNATURE_NID = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SCT_set_signature_nid(%struct.TYPE_3__* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %27 [
    i32 128, label %7
    i32 129, label %17
  ]

7:                                                ; preds = %2
  %8 = load i8*, i8** @TLSEXT_hash_sha256, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 2
  store i8* %8, i8** %10, align 8
  %11 = load i32, i32* @TLSEXT_signature_rsa, align 4
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 1
  store i32 %11, i32* %13, align 8
  %14 = load i8*, i8** @SCT_VALIDATION_STATUS_NOT_SET, align 8
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  store i8* %14, i8** %16, align 8
  store i32 1, i32* %3, align 4
  br label %31

17:                                               ; preds = %2
  %18 = load i8*, i8** @TLSEXT_hash_sha256, align 8
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 2
  store i8* %18, i8** %20, align 8
  %21 = load i32, i32* @TLSEXT_signature_ecdsa, align 4
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 1
  store i32 %21, i32* %23, align 8
  %24 = load i8*, i8** @SCT_VALIDATION_STATUS_NOT_SET, align 8
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 0
  store i8* %24, i8** %26, align 8
  store i32 1, i32* %3, align 4
  br label %31

27:                                               ; preds = %2
  %28 = load i32, i32* @CT_F_SCT_SET_SIGNATURE_NID, align 4
  %29 = load i32, i32* @CT_R_UNRECOGNIZED_SIGNATURE_NID, align 4
  %30 = call i32 @CTerr(i32 %28, i32 %29)
  store i32 0, i32* %3, align 4
  br label %31

31:                                               ; preds = %27, %17, %7
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i32 @CTerr(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
